fixed tag wrapping issue

--- a/css/base.css
+++ b/css/base.css
@@ -203,20 +203,20 @@ a#topofpage, a#menu-anchor {
     }
 
   .post .tags li {
-    display: inline;
+    display: inline-block;
     padding-left: 0;
     text-indent: 0;
   }
 
-  .post .tags li:before {
+  .post .tags li:last-child:after {
+    content: '';
+    margin: 0px;
+  }
+
+  .post .tags li:after {
     content: ',';
     margin: auto;
     margin-right: .35em;
-  }
-
-  .post .tags li:first-child:before {
-    content: '';
-    margin: 0px;
   }
 
 #footer .menu {
